package NRemorph;

message TPbConfig {
    message TBuild {
        enum EType {
            REMORPH = 0;
            TOKENLOGIC = 1;
            CHAR = 2;
        }

        required EType Type = 1;        // Rules type.
        required string Input = 2;      // Rules input file.
        required string Output = 3;     // Compiled rules output file.
        optional string Gzt = 4;        // Compiled Gazetteer file.
        optional string GztBase = 5;    // Base directory for resolving cascade paths.
        repeated string Require = 6;    // Compiled rules files on which this build unit depends.
        repeated string Owner = 7;      // Build unit owner.
    }

    repeated TBuild Build = 1;          // Build unit.
}
